--- a/src/app/component/employee-leave/employee-leave.component.css
+++ b/src/app/component/employee-leave/employee-leave.component.css
@@ -3,6 +3,7 @@
 .table__section {
     width: 100%;
     margin: 2em 0;
+    overflow: auto;
 }
 
 .mat-row .mat-cell {
@@ -24,10 +25,6 @@
 
 td {
     border-bottom: 1px solid #e0e0e0 !important;
-}
-
-.disableAcc {
-    display: none;
 }
 
 .disable {
