--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -17,7 +17,7 @@
 
 <div>
     <div fxLayout="row wrap" fxLayoutGap="16px grid">
-        <div fxFlex="33%" fxFlex.sm="50%">
+        <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; justify-content: space-between; align-items: center;">
                 <div>
                     <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
@@ -30,7 +30,7 @@
                 </div>
             </mat-card>
         </div>
-        <div fxFlex="33%" fxFlex.sm="50%">
+        <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display:  flex;justify-content: space-between; align-items: center;">
                 <div>
                     <div style="font-size: 1.8em; line-height: 1.8em;">Monthly Leave</div>
@@ -43,7 +43,7 @@
                 </div>
             </mat-card>
         </div>
-        <div fxFlex="34%" fxFlex.sm="50%">
+        <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; justify-content: space-between; align-items: center;">
                 <div>
                     <div style="font-size: 1.8em; line-height: 1.8em;">Pending Request</div>
