--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div fxLayout="row wrap" fxLayoutGap="16px grid" style="padding-top: 10px;">
-        <div fxFlex="25%" fxFlex.sm="50%">
+        <div fxFlex="25%" fxFlex.md="25%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; flex-direction: row; align-items: center; height: 86px;">
                 <div style="width: 70%;">
                     <mat-card-title>
@@ -32,7 +32,7 @@
                 </div>
             </mat-card>
         </div>
-        <div fxFlex="25%" fxFlex.sm="50%">
+        <div fxFlex="25%" fxFlex.md="25%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; flex-direction: row; align-items: center; height: 86px;">
                 <div style="width: 70%;">
                     <mat-card-title>
@@ -53,7 +53,7 @@
                 </div>
             </mat-card>
         </div>
-        <div fxFlex="25%" fxFlex.sm="50%">
+        <div fxFlex="25%" fxFlex.md="25%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; flex-direction: row; align-items: center; height: 86px;">
                 <div style="width: 70%;">
                     <mat-card-title>
@@ -74,7 +74,7 @@
                 </div>
             </mat-card>
         </div>
-        <div fxFlex="25%" fxFlex.sm="50%">
+        <div fxFlex="25%" fxFlex.md="25%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; flex-direction: row; align-items: center; height: 86px;">
                 <div style="width: 70%;">
                     <mat-card-title>
@@ -97,7 +97,7 @@
         </div>
     </div>
     <div fxLayout="row wrap" fxLayoutGap="16px grid" style="padding-top: 20px;">
-        <div fxFlex="50%" fxFlex.md="100%">
+        <div fxFlex="50%" fxFlex.md="100%" fxFlex.sm="100%" fxFlex.xs="100%">
             <mat-card style="height: 410px;">
                 <mat-card-header>
                     <div class="mat-h1">
@@ -112,8 +112,8 @@
                 </mat-card-content>
             </mat-card>
         </div>
-        <div fxFLex="100%" fxFlex.md="100%">
-            <mat-card style="height: 410px; width: 38.385vw;">
+        <div fxFlex="50%" fxFlex.md="100%" fxFlex.sm="100%" fxFlex.xs="100%">
+            <mat-card style="height: 410px;">
                 <mat-card-header>
                     <div class=" mat-h1 ">
                         Exployee structure
