--- a/src/app/component/attendance/attendance.component.html
+++ b/src/app/component/attendance/attendance.component.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 <div fxLayout="row wrap" fxLayoutGap="16px grid">
-    <div fxFlex="33%" fxFlex.sm="50%">
+    <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
         <mat-card style="height: 300px;">
             <h2>Timesheet<span style="font-weight: 400;"> {{ time | date : 'dd MMM YYYY  h:mm:ss a' }} </span> </h2>
             <mat-card>
@@ -25,7 +25,7 @@
             </div>
         </mat-card>
     </div>
-    <div fxFlex="33%" fxFlex.sm="50%">
+    <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
         <mat-card style="height: 300px;">
             <h2>Statistics</h2>
             <mat-card class="statistics">
@@ -61,7 +61,7 @@
 
         </mat-card>
     </div>
-    <div fxFlex="34%" fxFlex.sm="50%">
+    <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
         <mat-card style="height: 300px;">
             <h2>Today Activity</h2>
             <div class="container__activity">
