--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -16,7 +16,7 @@
 </div>
 <div>
     <div fxLayout="row wrap" fxLayoutGap="16px grid">
-        <div fxFlex="33%" fxFlex.sm="50%">
+        <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; justify-content: space-between; align-items: center;">
                 <div>
                     <div style="font-size: 1.8em; line-height: 1.8em;">Pendding Request</div>
@@ -29,7 +29,7 @@
                 </div>
             </mat-card>
         </div>
-        <div fxFlex="33%" fxFlex.sm="50%">
+        <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display:  flex; justify-content: space-between; align-items: center;">
                 <div>
                     <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
@@ -42,7 +42,7 @@
                 </div>
             </mat-card>
         </div>
-        <div fxFlex="34%" fxFlex.sm="50%">
+        <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; justify-content: space-between; align-items: center;">
                 <div>
                     <div style="font-size: 1.8em; line-height: 1.8em;">Leave Type</div>
@@ -72,7 +72,7 @@
                 </div>
                 <div>
                     <button (click)="openAcceptDialog(leave.id)" (click)="disableAcc = !disableAcc" [ngClass]="{'disable': disableAcc }" mat-raised-button style="margin-right: 10px; background-color: rgba(0, 201, 137, 0.8); color: white; font-weight: 500;"><i class="fas fa-check-circle"></i> Approve</button>
-                    <button (click)="openDeclineDialog(leave.id)" (click)="disable = !disable" [ngClass]="{'disable': disable}" mat-raised-button style="color: white; background-color: rgb(247, 85, 70); font-weight: 500;"><i class="fas fa-times-circle"></i> Decline</button>
+                    <button (click)="openDeclineDialog(leave.id)" mat-raised-button style="color: white; background-color: rgb(247, 85, 70); font-weight: 500;"><i class="fas fa-times-circle"></i> Decline</button>
                 </div>
             </mat-card>
             <div *ngIf="pending_leaves == ''" style="margin-left: 20px; color: orange">No request</div>
