--- a/src/app/component/Reports/eamployee-leave-report/employee-leave-report.component.html
+++ b/src/app/component/Reports/eamployee-leave-report/employee-leave-report.component.html
@@ -2,15 +2,11 @@
     <div style="display: flex; justify-content: space-between;">
         <h1 class="mat-h1" style="font-weight: 500;">Reports</h1>
         <div>
-
-            <button mat-button (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted})"
-                style=" color: #F89926">
-                <i class="far fa-file-export" style="transform: rotate(-180deg);"></i>
-                Export CSV
-            </button>
-            <button mat-raised-button color="primary">
-                <i class="far fa-file-import"></i>
-                Import CSV
+            <button mat-raised-button
+                (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted, columnWidths: [10,20,20,20,20,20,20,40,80]})"
+                (click)="download()" style="background-color: #F89926; color: #fff; margin-right: 30px">
+                <i style="margin-right:6px;" class="fa-solid fa-file-excel"></i>
+                Download Excel
             </button>
         </div>
 
@@ -22,61 +18,103 @@
         <h4 style="margin-left: 3px;">/ Leave </h4>
     </div>
 </div>
-<mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-</mat-form-field>
-<div style="padding: 2em;">
-    <mat-form-field class="example-full-width" appearance="outline" style="margin:1%">
-        <mat-label>Search Employee name</mat-label>
-        <input matInput>
+<div>
 
-    </mat-form-field>
-    <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Choose Department</mat-label>
-        <mat-select>
-            <mat-option value="option">PHP</mat-option>
-            <mat-option value="option">JAVA</mat-option>
-            <mat-option value="option">HR</mat-option>
-        </mat-select>
+    <!--Search section-->
+    <div style="margin: -14px 0 14px 0; ">
 
-    </mat-form-field>
-
-    <div class="mat-elevation-z2">
-        <table mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" style="width: 100%;">
-
-            <!-- Position Column -->
-            <ng-container matColumnDef="position">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-
-            <!-- Leave Type Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> LeaveType </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-
-            <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> From </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-            </ng-container>
-
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> To </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-            </ng-container>
-
-
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-            aria-label="Select page of periodic elements">
-        </mat-paginator>
+        <mat-card>
+            <div>
+                <form style="width: 55%;display: flex;align-items: center; justify-content: space-between ">
+                    <mat-form-field appearance="outline" style="padding: 0; margin-top: 20px">
+                        <mat-label>Search Name</mat-label>
+                        <input type="text" placeholder="Search name" aria-label="Number"
+                            (keyup.enter)="getOneEmployee()" matInput [formControl]="myControl" [matAutocomplete]="auto"
+                            [(ngModel)]="value">
+                        <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"
+                            style="color: #d64633;">
+                            <mat-icon>close</mat-icon>
+                        </button><button *ngIf="!value" matSuffix mat-icon-button style="color: rgb(30, 140, 243)">
+                            <mat-icon>search</mat-icon>
+                        </button>
+                        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                                {{option}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+                    <div style="display: flex; align-items:center">
+                        <button type="submit" mat-raised-button color="primary" (click)="getOneEmployee()">
+                            <mat-icon style="margin-right: 4px;">search</mat-icon> Search
+                        </button>
+                        <button type="reset" mat-raised-button color="warn" style="margin-left: 30px;"
+                            (click)="reset()">
+                            <mat-icon style="margin-right: 8px;">settings_backup_restore</mat-icon>
+                            Reset
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </mat-card>
     </div>
-</div>
+    <div>
+        <h2 style="color: rgb(30, 140, 243);">Employees Report ( {{length}} )</h2>
+
+    </div>
+
+    <div style="font-size: 10px;">
+        <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
+        <table mat-table matTableExporter #exporter="matTableExporter" mat-table [dataSource]="dataSource"
+            class="mat-elevation-z4 table__section" matSort style="width: 80vw; ">
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+                <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Full Name</th>
+                <td mat-cell *matCellDef="let element">{{element.firstName + " " + element.lastName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+                <td mat-cell *matCellDef="let element">{{element.email}}</td>
+            </ng-container>
+            <ng-container matColumnDef="leaveType">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>LeaveType</th>
+                <td mat-cell *matCellDef="let element">{{element.leave_reason}}</td>
+            </ng-container>
+            <ng-container matColumnDef="start.date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>From</th>
+                <td mat-cell *matCellDef="let element">{{element.start.date |date: "yyyy-MM-dd" }}</td>
+            </ng-container>
+            <ng-container matColumnDef="end.date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
+                <td mat-cell *matCellDef="let element">{{element.end.date | date: "yyyy-MM-dd"}}</td>
+            </ng-container>
+            <ng-container matColumnDef="totalLeave">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Day</th>
+                <td mat-cell *matCellDef="let element">{{totalLeave[element.id]}} days</td>
+
+            </ng-container>
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                <td mat-cell *matCellDef="let element">
+                    <div>{{element.status}}</div>
+                </td>
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+            </tr>
+
+        </table>
+    </div>
+
+    <mat-paginator style="background-color: #fafafa;" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+        aria-label="Select page of periodic elements">
+    </mat-paginator>
