--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -19,7 +19,7 @@
         <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
             <mat-card style="display: flex; justify-content: space-between; align-items: center;">
                 <div>
-                    <div style="font-size: 1.8em; line-height: 1.8em;">Pendding Request</div>
+                    <div style="font-size: 1.8em; line-height: 1.8em;">Pending Request</div>
                     <div style="font-size: 30px; font-weight: 900; color: rgba(0, 201, 137, 0.8);">{{ total_pendding | number: '2.' }}</div>
                 </div>
                 <div>
