--- a/src/app/component/attendance/attendance.component.html
+++ b/src/app/component/attendance/attendance.component.html
@@ -61,7 +61,7 @@
 
         </mat-card>
     </div>
-    <div fxFlex="33%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
+    <div fxFlex="34%" fxFlex.md="50%" fxFlex.sm="50%" fxFlex.xs="100%">
         <mat-card style="height: 300px;">
             <h2>Today Activity</h2>
             <div class="container__activity">
@@ -144,69 +144,82 @@
 
 
 </div>
-<div style=" padding: 2em;">
-    <div class="container">
-        <div class="option">
-            <mat-form-field appearance="outline">
-                <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-        </div>
-        <div class="option">
-            <mat-form-field class="example-full-width" appearance="outline">
-                <mat-label>Choose Month</mat-label>
-                <mat-select>
-                    <mat-option value="option">PHP</mat-option>
-                    <mat-option value="option">JAVA</mat-option>
-                    <mat-option value="option">HR</mat-option>
-                </mat-select>
+<div>
+    <mat-card style="margin: 20px 0;">
+        <mat-form-field appearance="outline" style="margin: 0 1%">
+            <mat-label>Search Employee name</mat-label>
+            <input matInput placeholder="Seach id, name...." #input>
+        </mat-form-field>
+        <mat-form-field background-color="#fafafa" appearance="outline" style="margin: 0 1%">
+            <mat-label>Select Month</mat-label>
+            <mat-select>
+                <mat-option value="option">Jan</mat-option>
+                <mat-option value="option">Feb</mat-option>
+                <mat-option value="option">Mar</mat-option>
+                <mat-option value="option">Apr</mat-option>
+                <mat-option value="option">May</mat-option>
+                <mat-option value="option">Jun</mat-option>
+                <mat-option value="option">Jul</mat-option>
+                <mat-option value="option">Aug</mat-option>
+                <mat-option value="option">Sep</mat-option>
+                <mat-option value="option">Oct</mat-option>
+                <mat-option value="option">Nov</mat-option>
+                <mat-option value="option">Dec</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field class="example-full-width" appearance="outline" style="margin: 0 1%">
+            <mat-label>Select Year</mat-label>
+            <mat-select>
+                <mat-option value="option">2022</mat-option>
+                <mat-option value="option">2021</mat-option>
+                <mat-option value="option">2020</mat-option>
+                <mat-option value="option">2019</mat-option>
+                <mat-option value="option">2018</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </mat-card>
 
-            </mat-form-field>
-        </div>
-        <div class="option">
-            <mat-form-field class="example-full-width" appearance="outline">
-                <mat-label>Choose Year</mat-label>
-                <mat-select>
-                    <mat-option value="option">PHP</mat-option>
-                    <mat-option value="option">JAVA</mat-option>
-                    <mat-option value="option">HR</mat-option>
-                </mat-select>
-
-            </mat-form-field>
-        </div>
-        <div class="option">
-            <button mat-raised-button color="primary" style="width: 110px;height: 50px;">
-                <mat-icon style="margin-right: 1px;">search</mat-icon>Search
-            </button>
-        </div>
-    </div>
-
-    <div class="mat-elevation-z2">
-        <table mat-table [dataSource]="dataSource" style="width: 100%;">
-
+    <div>
+        <table class="mat-elevation-z2" mat-table [dataSource]="dataSource" style="width: 100%;">
             <!-- Position Column -->
-            <ng-container matColumnDef="position">
+            <ng-container matColumnDef="no">
                 <th mat-header-cell *matHeaderCellDef> No. </th>
                 <td mat-cell *matCellDef="let element"> {{element.position}} </td>
             </ng-container>
 
             <!-- Leave Type Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> LeaveType </th>
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef> Date </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
 
             <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> From </th>
+            <ng-container matColumnDef="clock in 1">
+                <th mat-header-cell *matHeaderCellDef> Clock in 1 </th>
                 <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
             </ng-container>
 
             <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> To </th>
+            <ng-container matColumnDef="clock out 1">
+                <th mat-header-cell *matHeaderCellDef> Clock out 1 </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="clock in 2">
+                <th mat-header-cell *matHeaderCellDef> Clock in 2 </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="clock out 2">
+                <th mat-header-cell *matHeaderCellDef> Clock out 2 </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="total hours">
+                <th mat-header-cell *matHeaderCellDef> Total Work Time </th>
                 <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
             </ng-container>
 
@@ -215,8 +228,7 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
-        </mat-paginator>
     </div>
+    <mat-paginator style="padding-bottom: 20px; background-color: #fafafa;" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
 </div>
