--- a/src/app/component/Auth/change-password/change-password.component.html
+++ b/src/app/component/Auth/change-password/change-password.component.html
@@ -19,7 +19,7 @@
                         <mat-form-field appearance="outline" style="width: 380px;">
                             <mat-label>Old Password</mat-label>
                             <input matInput [type]="hide ? 'password' : 'text'" type="password"
-                                placeholder="Input old password" [(ngModel)]="changePassword.old_password" required
+                                placeholder="Input old password" [(ngModel)]="changePassword.old_password"
                                 name="old password">
                             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                                 [attr.aria-pressed]="hide">
@@ -31,7 +31,7 @@
                         <mat-form-field appearance="outline" style="width: 380px;">
                             <mat-label>New Password</mat-label>
                             <input matInput [type]="hide ? 'password' : 'text'" type="password"
-                                placeholder="Input new password" [(ngModel)]="changePassword.new_password" required
+                                placeholder="Input new password" [(ngModel)]="changePassword.new_password"
                                 name="new Password">
                             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                                 [attr.aria-pressed]="hide">
@@ -41,8 +41,7 @@
                     </div>
                 </div>
                 <div style="display: flex; flex-direction: row">
-                    <a routerLink="/account/dashboard"> <button mat-button color="warn"
-                            style="height: 45px;">Cancel</button></a>
+                    <a> <button (click)="reset()" mat-button color="warn" style="height: 45px;">Reset</button></a>
                     <button mat-raised-button type="submit"
                         style="background-color: #F89926; color: white; font-weight: 500; height: 45px;"
                         (click)="apply()">Apply
