--- a/src/app/component/Reports/eamployee-leave-report/employee-leave-report.component.html
+++ b/src/app/component/Reports/eamployee-leave-report/employee-leave-report.component.html
@@ -1,14 +1,7 @@
 <div style="overflow-y: hidden;">
     <div style="display: flex; justify-content: space-between;">
         <h1 class="mat-h1" style="font-weight: 500;">Reports</h1>
-        <div>
-            <button mat-raised-button
-                (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted, columnWidths: [10,20,20,20,20,20,20,40,80]})"
-                (click)="download()" style="background-color: #F89926; color: #fff; margin-right: 30px">
-                <i style="margin-right:6px;" class="fa-solid fa-file-excel"></i>
-                Download Excel
-            </button>
-        </div>
+
 
     </div>
     <div style=" display: flex; flex-direction: row">
@@ -23,7 +16,7 @@
     <!--Search section-->
     <div style="margin: -14px 0 14px 0; ">
 
-        <mat-card>
+        <mat-card style="display: flex; justify-content: space-between; align-items: center">
             <div>
                 <form style="width: 55%;display: flex;align-items: center; justify-content: space-between ">
                     <mat-form-field appearance="outline" style="padding: 0; margin-top: 20px">
@@ -32,7 +25,7 @@
                             (keyup.enter)="getOneEmployee()" matInput [formControl]="myControl" [matAutocomplete]="auto"
                             [(ngModel)]="value">
                         <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"
-                            style="color: #d64633;">
+                            (click)="reset()" style="color: #d64633;">
                             <mat-icon>close</mat-icon>
                         </button><button *ngIf="!value" matSuffix mat-icon-button style="color: rgb(30, 140, 243)">
                             <mat-icon>search</mat-icon>
@@ -43,17 +36,26 @@
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
-                    <div style="display: flex; align-items:center">
-                        <button type="submit" mat-raised-button color="primary" (click)="getOneEmployee()">
-                            <mat-icon style="margin-right: 4px;">search</mat-icon> Search
-                        </button>
-                        <button type="reset" mat-raised-button color="warn" style="margin-left: 30px;"
-                            (click)="reset()">
-                            <mat-icon style="margin-right: 8px;">settings_backup_restore</mat-icon>
-                            Reset
-                        </button>
-                    </div>
+
                 </form>
+            </div>
+            <div style="display: flex; align-items:center">
+                <div>
+                    <button type="submit" mat-raised-button color="primary" (click)="getOneEmployee()">
+                        <mat-icon style="margin-right: 4px;">search</mat-icon> Search
+                    </button>
+                    <button type="reset" mat-raised-button color="warn" style="margin-left: 30px;" (click)="reset()">
+                        <mat-icon style="margin-right: 8px;">settings_backup_restore</mat-icon>
+                        Reset
+                    </button>
+                </div>
+                <button mat-raised-button
+                    (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted, columnWidths: [10,20,20,20,20,20,20,40,80]})"
+                    (click)="download()" style="background-color: #00c5fb; color: #fff; margin-left: 30px">
+                    <i style="margin-right: 8px; font-size: 18px;" class="fa-regular fa-file-excel"></i>
+
+                    Download Excel
+                </button>
             </div>
         </mat-card>
     </div>
@@ -67,9 +69,9 @@
         <table mat-table matTableExporter #exporter="matTableExporter" mat-table [dataSource]="dataSource"
             class="mat-elevation-z4 table__section" matSort style="width: 80vw; ">
             <!-- Position Column -->
-            <ng-container matColumnDef="id">
+            <ng-container matColumnDef="user_id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-                <td mat-cell *matCellDef="let element">{{element.id}}</td>
+                <td mat-cell *matCellDef="let element">{{element.user_id}}</td>
             </ng-container>
 
             <!-- Name Column -->
