--- a/src/app/component/Reports/employee-report/employee-report.component.html
+++ b/src/app/component/Reports/employee-report/employee-report.component.html
@@ -1,14 +1,7 @@
 <div style="overflow-y: hidden;">
     <div style="display: flex; justify-content: space-between;">
         <h1 class="mat-h1" style="font-weight: 500;">Reports</h1>
-        <div>
-            <button mat-raised-button
-                (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted, columnWidths: [10,20,20,20,20,20,20,40,80]})"
-                (click)="download()" style="background-color: #F89926; color: #fff; margin-right: 30px">
-                <i style="margin-right:6px;" class="fa-solid fa-file-excel"></i>
-                Download Excel
-            </button>
-        </div>
+
 
     </div>
     <div style=" display: flex; flex-direction: row">
@@ -24,36 +17,52 @@
     <div style="margin: -14px 0 14px 0; ">
 
         <mat-card>
-            <div>
-                <form style="width: 55%;display: flex;align-items: center; justify-content: space-between ">
-                    <mat-form-field appearance="outline" style="padding: 0; margin-top: 20px">
-                        <mat-label>Search Name</mat-label>
-                        <input type="text" placeholder="Search name" aria-label="Number"
-                            (keyup.enter)="getOneEmployee()" matInput [formControl]="myControl" [matAutocomplete]="auto"
-                            [(ngModel)]="value">
-                        <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"
-                            style="color: #d64633;">
-                            <mat-icon>close</mat-icon>
-                        </button><button *ngIf="!value" matSuffix mat-icon-button style="color: rgb(30, 140, 243)">
-                            <mat-icon>search</mat-icon>
-                        </button>
-                        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-                            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                                {{option}}
-                            </mat-option>
-                        </mat-autocomplete>
-                    </mat-form-field>
-                    <div style="display: flex; align-items:center">
+            <div style="display: flex;justify-content: space-between;align-items: center">
+                <div>
+                    <form>
+                        <mat-form-field appearance="outline" style="padding: 0; margin-top: 20px; margin-right: 24px;">
+                            <mat-label>Search Name</mat-label>
+                            <input type="text" placeholder="Search name" aria-label="Number"
+                                (keyup.enter)="getOneEmployee()" matInput [formControl]="myControl"
+                                [matAutocomplete]="auto" [(ngModel)]="value">
+                            <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''"
+                                (click)="reset()" style="color: #d64633;">
+                                <mat-icon>close</mat-icon>
+                            </button><button *ngIf="!value" matSuffix mat-icon-button style="color: rgb(30, 140, 243)">
+                                <mat-icon>search</mat-icon>
+                            </button>
+                            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                                    {{option}}
+                                </mat-option>
+                            </mat-autocomplete>
+                        </mat-form-field>
+
+
+                    </form>
+
+                </div>
+
+                <div style="display: flex; align-items:center; justify-content: space-evenly;">
+                    <div style="display: flex; align-items:center; justify-content: center; width: 100%;">
                         <button type="submit" mat-raised-button color="primary" (click)="getOneEmployee()">
-                            <mat-icon style="margin-right: 4px;">search</mat-icon> Search
+                            <mat-icon style="margin-right: 4px;">search</mat-icon>
+                            Search
                         </button>
-                        <button type="reset" mat-raised-button color="warn" style="margin-left: 30px;"
-                            (click)="reset()">
+                        <button type="reset" mat-raised-button color="warn" style="margin:0 20px;" (click)="reset()">
                             <mat-icon style="margin-right: 8px;">settings_backup_restore</mat-icon>
                             Reset
                         </button>
                     </div>
-                </form>
+                    <div>
+                        <button mat-raised-button
+                            (click)="exporter.exportTable('xlsx', {fileName:'EmployeeReport_'+formatted, columnWidths: [10,20,20,20,20,20,20,40,80]})"
+                            (click)="download()" style="background-color: #00c5fb; color: #fff;">
+                            <i style="margin-right: 8px; font-size: 18px;" class="fa-regular fa-file-excel"></i>
+                            Download Excel
+                        </button>
+                    </div>
+                </div>
             </div>
         </mat-card>
     </div>
