--- a/src/app/component/attendance/attendance.component.html
+++ b/src/app/component/attendance/attendance.component.html
@@ -146,10 +146,6 @@
 </div>
 <div>
     <mat-card style="margin: 20px 0;">
-        <mat-form-field appearance="outline" style="margin: 0 1%">
-            <mat-label>Search Employee name</mat-label>
-            <input matInput placeholder="Seach id, name...." #input>
-        </mat-form-field>
         <mat-form-field background-color="#fafafa" appearance="outline" style="margin: 0 1%">
             <mat-label>Select Month</mat-label>
             <mat-select>
@@ -178,17 +174,20 @@
             </mat-select>
         </mat-form-field>
     </mat-card>
+    <div>
+        <h2 style="color: rgb(30, 140, 243);">Employees Monthly Attendance ({{ date | date: 'MMM yyyy' }})</h2>
+    </div>
 
     <div>
-        <table class="mat-elevation-z2" mat-table [dataSource]="dataSource" style="width: 100%;">
+        <table class="mat-elevation-z4" mat-table [dataSource]="dataSource" style="width: 100%;">
             <!-- Leave Type Column -->
             <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef> Date </th>
+                <th mat-header-cell *matHeaderCellDef><span style="padding-left: 15px;"> Date </span></th>
                 <td mat-cell *matCellDef="let element; let i = index">
-                    <span>{{ days[this.paginator.pageIndex * this.paginator.pageSize + i] }},</span>
+                    <span style="font-weight: 500;" [ngStyle]="{'color': days[this.paginator.pageIndex * this.paginator.pageSize + i].color }">{{ days[this.paginator.pageIndex * this.paginator.pageSize + i].day }},</span>
                     <ng-container *ngFor="let item of element; let i = index">
                         <ng-container *ngIf="i == 0">
-                            {{ item.created.date | date: 'dd MMM yyyy' }}
+                            <span style="font-weight: 500; color: rgba(0,0,0,.54)"> {{ item.created.date | date: 'dd MMM yyyy' }}</span>
                         </ng-container>
                     </ng-container>
                 </td>
@@ -201,11 +200,14 @@
                     <!-- {{ element.length }} -->
                     <ng-container *ngFor="let item of element">
                         <ng-container *ngIf="item.attendance_type == 'clock in 1'">
-                            {{ item.created.date | date: 'h:mm:ss a' }}
+                            <div>{{ item.created.date | date: 'h:mm:ss a' }}</div>
+                        </ng-container>
+                        <ng-container *ngIf="item.attendance_type.name == 'clock in 1' && (days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sat' && days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sun')">
+                            <div style="color: rgb(244, 67, 54, .7)">Did not Clock In</div>
                         </ng-container>
                     </ng-container>
-                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
-                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sun'">
+                        <div style="color: rgb(240, 179, 24); font-weight: 500; font-style: italic">Week Off</div>
                     </ng-container>
                 </td>
             </ng-container>
@@ -216,12 +218,14 @@
                 <td mat-cell *matCellDef="let element; let i = index">
                     <ng-container *ngFor="let item of element">
                         <ng-container *ngIf="item.attendance_type == 'clock out 1'">
-                            {{ item.created.date | date: 'h:mm:ss a' }}
+                            <div>{{ item.created.date | date: 'h:mm:ss a' }}</div>
                         </ng-container>
-                        <ng-container *ngIf="item.attendance_type != 'clock out 1' && (days[this.paginator.pageIndex * this.paginator.pageSize + i] != 'Sat' && days[this.paginator.pageIndex * this.paginator.pageSize + i] != 'Sun')">Miss</ng-container>
+                        <ng-container *ngIf="item.attendance_type.name == 'clock out 1' && (days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sat' && days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sun')">
+                            <div style="color: rgb(244, 67, 54, .7)">Did not Clock Out</div>
+                        </ng-container>
                     </ng-container>
-                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
-                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sun'">
+                        <div style="color: rgb(240, 179, 24); font-weight: 500; font-style: italic">Week Off</div>
                     </ng-container>
                 </td>
             </ng-container>
@@ -232,11 +236,14 @@
                 <td mat-cell *matCellDef="let element; let i = index">
                     <ng-container *ngFor="let item of element">
                         <ng-container *ngIf="item.attendance_type == 'clock in 2'">
-                            {{ item.created.date | date: 'h:mm:ss a' }}
+                            <div>{{ item.created.date | date: 'h:mm:ss a' }}</div>
+                        </ng-container>
+                        <ng-container *ngIf="item.attendance_type.name == 'clock in 2' && (days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sat' && days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sun')">
+                            <div style="color: rgb(244, 67, 54, .7)">Did not Clock In</div>
                         </ng-container>
                     </ng-container>
-                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
-                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sun'">
+                        <div style="color: rgb(240, 179, 24); font-weight: 500; font-style: italic">Week Off</div>
                     </ng-container>
                 </td>
             </ng-container>
@@ -247,11 +254,14 @@
                 <td mat-cell *matCellDef="let element; let i = index">
                     <ng-container *ngFor="let item of element">
                         <ng-container *ngIf="item.attendance_type == 'clock out 2'">
-                            {{ item.created.date | date: 'h:mm:ss a' }}
+                            <div>{{ item.created.date | date: 'h:mm:ss a' }}</div>
+                        </ng-container>
+                        <ng-container *ngIf="item.attendance_type.name == 'clock out 2' && (days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sat' && days[this.paginator.pageIndex * this.paginator.pageSize + i].day != 'Sun')">
+                            <div style="color: rgb(244, 67, 54, .7)">Did not Clock Out</div>
                         </ng-container>
                     </ng-container>
-                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i] == 'Sun'">
-                        <span style="color: rgb(255, 60, 60);">Week Off</span>
+                    <ng-container *ngIf="days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sat' || days[this.paginator.pageIndex * this.paginator.pageSize + i].day == 'Sun'">
+                        <div style="color: rgb(240, 179, 24); font-weight: 500; font-style: italic">Week Off</div>
                     </ng-container>
                 </td>
             </ng-container>
@@ -268,6 +278,6 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
-    <mat-paginator style="padding-bottom: 20px; background-color: #fafafa;" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    <mat-paginator style="padding-bottom: 20px; background-color: #fafafa;" [pageSizeOptions]="[7, 14, 21, 28]" showFirstLastButtons aria-label="Select page of periodic elements">
     </mat-paginator>
 </div>
