--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -137,7 +137,7 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <mat-icon color="primary">remove_red_eye</mat-icon>
+                <mat-icon color="primary" routerLink="/employee/leave/1">remove_red_eye</mat-icon>
                 <mat-icon color="primary" (click)="openEditDialog(element.id)">edit</mat-icon>
                 <mat-icon style="margin-left: 5px;" color="warn" (click)="openDeleteDialog(element.id)">delete
                 </mat-icon>
