--- a/src/app/component/attendance-admin/attendance-admin.component.html
+++ b/src/app/component/attendance-admin/attendance-admin.component.html
@@ -55,7 +55,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let row"> {{row.name}} ABBHJABAHBHABHJABHJABFHBFABW </td>
+                <td mat-cell *matCellDef="let row">{{row.lastName + " " + row.firstName}}</td>
             </ng-container>
 
             <!-- Progress Column -->
@@ -70,26 +70,35 @@
                     <div>{{ days[i] }}</div>
                 </th>
                 <td mat-cell *matCellDef="let row">
-                    <ng-container *ngIf="days[i] == 'Sun' || days[i] == 'Sat'; else elseTemplate">
+                    <ng-container *ngIf=" i < current_day && (days[i] == 'Sun' || days[i] == 'Sat')">
                         <i class="fas fa-circle" style="font-size: 7px; color: rgb(144, 149, 153);"></i>
                     </ng-container>
-                    <ng-template #elseTemplate>
-                        <i class="fas fa-check-circle" style="color: rgb(51, 209, 16);"></i>
-                        <!-- <i class="fas fa-times-circle" style="color: rgb(247, 85, 70);"></i> -->
-                        <!-- <i class="fas fa-alarm-exclamation" style="color: rgb(240, 179, 24);"></i> -->
-                    </ng-template>
+                    <ng-container *ngIf="i < current_day && (days[i] != 'Sun' && days[i] != 'Sat')">
+                        <ng-container *ngFor="let att of attendanceMonthly[i]; let num = index">
+                            <ng-container *ngIf="att?.employee_id == row.id">
+                                <i class="fas fa-check-circle " style="color: rgb(51, 209, 16); "></i>
+                            </ng-container>
+                            <ng-container *ngIf="displayCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1)">
+                                <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
+                            </ng-container>
+
+
+                            <!-- <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i> -->
+                        </ng-container>
+
+                    </ng-container>
                 </td>
             </ng-container>
 
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
 
             <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            <tr class="mat-row " *matNoDataRow>
+                <td class="mat-cell " colspan="4 ">No data matching the filter "{{input.value}} "</td>
             </tr>
         </table>
     </div>
-    <mat-paginator class="mat-elevation-z8" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator class="mat-elevation-z8 " [pageSizeOptions]="[5, 10, 25, 100] " aria-label="Select page of users "></mat-paginator>
 </div>
