--- a/src/app/component/employee-leave-detail/employee-leave-detail.component.html
+++ b/src/app/component/employee-leave-detail/employee-leave-detail.component.html
@@ -1,1 +1,150 @@
-<p>employee-leave-detail works!</p>
+<div class="container">
+    <div style="overflow-y: hidden;">
+        <div style="display: flex; justify-content: space-between;">
+            <h1 class="mat-h1" style="font-weight: 500;">Leave</h1>
+        </div>
+        <div style=" display: flex; flex-direction: row">
+            <a routerLink="/account/dashboard">
+                <h4>Dashboard</h4>
+            </a>
+            <a routerLink="/employee/leave" style="margin-left: 3px;">
+                <h4>/ Leave </h4>
+            </a>
+            <h4 style="margin-left: 3px;">/ Detail </h4>
+        </div>
+    </div>
+    <div>
+        <mat-card>
+            <mat-card-content fxLayout="row wrap" fxLayoutGap="16px grid">
+                <div fxFlex="40%" fxFlex.md="100%" fxFlex.sm="100%" fxFlex.xs="100%">
+                    <div style="display: flex; justify-content: center; flex-direction: column; align-items: center; border-bottom: 1px dashed #ccc;">
+                        <div><img width="90px" height="90px" style="border-radius: 90px;" src="{{ leave_one.imageURL ? leave_one.imageURL :  '/assets/images/profile_user.png'}}" alt="#"></div>
+                        <h2>{{ leave_one.lastName + " " + leave_one.firstName }}</h2>
+                        <mat-card-subtitle style="font-size: 11px; color: rgb(94, 94, 94);">{{ leave_one.department }}</mat-card-subtitle>
+                    </div>
+                    <div>
+                        <h4 style="color: rgb(30, 140, 243); margin: 20px 0 5px 0;">Basic User Information</h4>
+                        <table style="width: 100%;">
+                            <tr>
+                                <td>EmployeeID: </td>
+                                <td>{{ leave_one.employeeID }}</td>
+                            </tr>
+                            <tr>
+                                <td>Email: </td>
+                                <td>{{ leave_one.email }}</td>
+                            </tr>
+                            <tr>
+                                <td>Position: </td>
+                                <td>{{ leave_one.position }}</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div style="margin-top: 50px;">
+                        <span>Request Leave Date: {{ leave_one.created?.date | date: 'dd MMM yyyy h:mm:ss a' }}</span>
+                    </div>
+                </div>
+                <div fxFlex="60%" fxFlex.md="100%" fxFlex.sm="100%" fxFlex.xs="100%">
+                    <div>
+                        <h2 style="color: rgb(30, 140, 243); margin: 20px 0 5px 0;">Leave Information</h2>
+                    </div>
+                    <mat-card>
+                        <mat-card-header>
+                            <mat-card-title style="display: flex; flex-direction: row; align-items: center;">
+                                <div style="margin-right: 8px;">Status</div>
+                                <button mat-stroked-button color="primary">Pendding</button>
+                            </mat-card-title>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <table style="width: 60%;">
+                                <tr>
+                                    <td>
+                                        <h3>Start From: {{ leave_one.start?.date | date: 'dd MMM yyyy' }}</h3>
+                                    </td>
+                                    <td>
+                                        <h3>End: {{ leave_one.end?.date | date: 'dd MMM yyyy' }}</h3>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <h3>Leave Type: {{ leave_one.leave_reason }}</h3>
+                                    </td>
+                                </tr>
+                            </table>
+                            <div>
+                                <form class="description-form">
+                                    <mat-form-field class="description-full-width" appearance="fill">
+                                        <mat-label>Description</mat-label>
+                                        <textarea style="height: 100px" matInput name="description" #message maxlength="1001" placeholder="decription" [(ngModel)]="leave_one.description"></textarea>
+                                        <mat-hint align="end">{{message.value.length}} / 1001</mat-hint>
+                                    </mat-form-field>
+                                </form>
+                            </div>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div>
+        <div>
+            <h3 style="color: rgb(30, 140, 243); margin: 20px 0 5px 0;">Total Leave Application ({{ total_leave }})</h3>
+        </div>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section" matSort>
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>No</th>
+                <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            </ng-container>
+
+            <!-- Name Column
+        <ng-container matColumnDef="employee">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.employee}}</td>
+        </ng-container> -->
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="leave_reason">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Leave Type</th>
+                <td mat-cell *matCellDef="let element">{{element.leave_reason}}</td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="from">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Start From</th>
+                <td mat-cell *matCellDef="let element">{{element.start.date | date: "yyyy-MM-dd"}}</td>
+            </ng-container>
+            <ng-container matColumnDef="to">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
+                <td mat-cell *matCellDef="let element">{{element.end.date | date: "yyyy-MM-dd"}}</td>
+            </ng-container>
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+                <td mat-cell *matCellDef="let element">{{element.description ?? "No description"}}</td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef>Status</th>
+                <td mat-cell *matCellDef="let element">
+                    <button *ngIf="element.status == 'Approved'" mat-raised-button style="border-radius: 25px; background-color: rgba(0, 201, 137, 0.8); color: white; font-weight: 500;">{{ element.status }}</button>
+                    <button *ngIf="element.status == 'Pending'" mat-raised-button style="border-radius: 25px; background-color: rgb(240, 179, 24); color: white; font-weight: 500;">{{ element.status }}</button>
+                    <button *ngIf="element.status == 'Declined'" mat-raised-button style="border-radius: 25px; color: white; background-color: rgb(247, 85, 70); font-weight: 500;">{{ element.status }}</button>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-icon color="primary" routerLink="/employee/leave/{{ element.id }}" (click)="changeId(element.id)">remove_red_eye</mat-icon>
+                    <!-- <mat-icon color="primary" (click)="openEditDialog(element.id)">edit</mat-icon>
+                <mat-icon style="margin-left: 5px;" color="warn" (click)="openDeleteDialog(element.id)">delete</mat-icon> -->
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+            </tr>
+        </table>
+
+        <mat-paginator style="background-color: #fafafa;" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+</div>
