--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -102,7 +102,7 @@
             <td mat-cell *matCellDef="let element">
                 <button *ngIf="element.status == 'Approved'" mat-raised-button style="border-radius: 25px; background-color: rgba(0, 201, 137, 0.8); color: white; font-weight: 500;">{{ element.status }}</button>
                 <button *ngIf="element.status == 'Pending'" mat-raised-button style="border-radius: 25px; background-color: rgb(240, 179, 24); color: white; font-weight: 500;">{{ element.status }}</button>
-                <button *ngIf="element.status == 'Declined'" mat-raised-button style="border-radius: 25px; color: rgb(247, 85, 70); font-weight: 500;">{{ element.status }}</button>
+                <button *ngIf="element.status == 'Declined'" mat-raised-button style="border-radius: 25px; color: white; background-color: rgb(247, 85, 70); font-weight: 500;">{{ element.status }}</button>
             </td>
         </ng-container>
         <!-- <ng-container matColumnDef="duration">
@@ -115,7 +115,7 @@
         <ng-container matColumnDef="actions" *ngIf="showFail">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <mat-icon color="primary">remove_red_eye</mat-icon>
+                <mat-icon color="primary" routerLink="/employee/leave/{{ element.id }}">remove_red_eye</mat-icon>
                 <mat-icon color="primary" (click)="openEditDialog(element.id)">edit</mat-icon>
                 <mat-icon style="margin-left: 5px;" color="warn" (click)="openDeleteDialog(element.id)">delete</mat-icon>
             </td>
