--- a/src/app/component/attendance-admin/attendance-admin.component.css
+++ b/src/app/component/attendance-admin/attendance-admin.component.css
@@ -1,11 +1,13 @@
 .clendar-container {
-    height: 365px;
-    width: auto;
-    overflow: auto;
+    height: 375px;
+    /* width: 100%; */
+    /* width: auto; */
+    /* overflow: auto; */
+    border-bottom: 1px solid blue;
 }
 
 table {
-    width: 100vw;
+    width: 100%;
 }
 
 th {
@@ -126,6 +128,15 @@ th.mat-column-a8 {
 
 /* iput color */
 
-input.mat-input-element {
+
+/* input.mat-input-element {
     color: red;
+} */
+
+
+/** **/
+
+i {
+    font-size: 12px;
+    margin: 0 1px;
 }
