--- a/src/app/component/attendance-admin/attendance-admin.component.html
+++ b/src/app/component/attendance-admin/attendance-admin.component.html
@@ -14,33 +14,39 @@
         <mat-label>Search Employee name</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Seach id, name...." #input>
     </mat-form-field>
-    <mat-form-field background-color="#fafafa" appearance="outline" style="margin: 0 1%">
-        <mat-label>Select Month</mat-label>
-        <mat-select>
-            <mat-option value="option">Jan</mat-option>
-            <mat-option value="option">Feb</mat-option>
-            <mat-option value="option">Mar</mat-option>
-            <mat-option value="option">Apr</mat-option>
-            <mat-option value="option">May</mat-option>
-            <mat-option value="option">Jun</mat-option>
-            <mat-option value="option">Jul</mat-option>
-            <mat-option value="option">Aug</mat-option>
-            <mat-option value="option">Sep</mat-option>
-            <mat-option value="option">Oct</mat-option>
-            <mat-option value="option">Nov</mat-option>
-            <mat-option value="option">Dec</mat-option>
-        </mat-select>
+    <mat-form-field appearance="outline">
+        <mat-label>Month</mat-label>
+        <input type="text" placeholder="Pick one" aria-label="Number" matInput [matAutocomplete]="auto" name="monthSelect" [(ngModel)]="month">
+        <mat-autocomplete #auto="matAutocomplete">
+            <mat-option value="Jan">Jan</mat-option>
+            <mat-option value="Feb">Feb</mat-option>
+            <mat-option value="Mar">Mar</mat-option>
+            <mat-option value="Apr">Apr</mat-option>
+            <mat-option value="May">May</mat-option>
+            <mat-option value="Jun">Jun</mat-option>
+            <mat-option value="Jul">Jul</mat-option>
+            <mat-option value="Aug">Aug</mat-option>
+            <mat-option value="Sep">Sep</mat-option>
+            <mat-option value="Oct">Oct</mat-option>
+            <mat-option value="Nov">Nov</mat-option>
+            <mat-option value="Dec">Dec</mat-option>
+        </mat-autocomplete>
     </mat-form-field>
+
     <mat-form-field class="example-full-width" appearance="outline" style="margin: 0 1%">
         <mat-label>Select Year</mat-label>
-        <mat-select>
-            <mat-option value="option">2022</mat-option>
-            <mat-option value="option">2021</mat-option>
-            <mat-option value="option">2020</mat-option>
-            <mat-option value="option">2019</mat-option>
-            <mat-option value="option">2018</mat-option>
+        <mat-select name="yearSelect" [(value)]="current_year">
+            <mat-option [value]="2022">2022</mat-option>
+            <mat-option [value]="2021">2021</mat-option>
+            <mat-option [value]="2020">2020</mat-option>
+            <mat-option [value]="2019">2019</mat-option>
+            <mat-option [value]="2018">2018</mat-option>
         </mat-select>
     </mat-form-field>
+    <button type="submit" mat-raised-button color="primary" (click)="searchMonthYear()">
+      <mat-icon style="margin-right: 4px;">search</mat-icon>
+      Search
+    </button>
 </mat-card>
 <div>
     <div style="overflow: auto;" class="mat-elevation-z8 clendar-container">
@@ -48,8 +54,8 @@
 
             <!-- ID Column -->
             <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> ID </th>
-                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+                <th mat-header-cell *matHeaderCellDef> No </th>
+                <td mat-cell *matCellDef="let row; let i = index"> {{this.paginator.pageIndex * this.paginator.pageSize + i + 1}} </td>
             </ng-container>
 
             <!-- Name Column -->
@@ -58,34 +64,54 @@
                 <td mat-cell *matCellDef="let row">{{row.lastName + " " + row.firstName}}</td>
             </ng-container>
 
-            <!-- Progress Column -->
-            <ng-container matColumnDef="total">
-                <th mat-header-cell *matHeaderCellDef> Total Workday </th>
-                <td mat-cell *matCellDef="let row">{{ row.progress}} / {{ attendanceColumns.length }} </td>
-            </ng-container>
-
             <!-- Fruit Column -->
             <ng-container *ngFor="let attend of attendanceColumns; index as i" matColumnDef="{{ attend }}">
                 <th mat-header-cell *matHeaderCellDef> {{ i+1 }}
                     <div>{{ days[i] }}</div>
+                    <div style="font-size: 6px;">AM | PM</div>
                 </th>
                 <td mat-cell *matCellDef="let row">
-                    <ng-container *ngIf=" i < current_day && (days[i] == 'Sun' || days[i] == 'Sat')">
+                    <ng-container *ngIf="(days[i] == 'S' || days[i] == 'S')">
                         <i class="fas fa-circle" style="font-size: 7px; color: rgb(144, 149, 153);"></i>
                     </ng-container>
-                    <ng-container *ngIf="i < current_day && (days[i] != 'Sun' && days[i] != 'Sat')">
+                    <ng-container *ngIf="(days[i] != 'S' && days[i] != 'S') && (currentYear <= current_year && currentMonth >= current_month)">
                         <ng-container *ngFor="let att of attendanceMonthly[i]; let num = index">
-                            <ng-container *ngIf="att?.employee_id == row.id">
-                                <i class="fas fa-check-circle " style="color: rgb(51, 209, 16); "></i>
+                            <!-- Morning AM-->
+                            <ng-container *ngIf="att?.employee_id == row.id && att?.attendance_type == 'clock in 1'">
+                                <ng-container *ngIf="checkLateTimeAM(att?.created.date)">
+                                    <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24);"></i>
+                                </ng-container>
+                                <ng-container *ngIf="!checkLateTimeAM(att?.created.date)">
+                                    <i class="fas fa-check-circle " style="color: rgb(51, 209, 16);"></i>
+                                </ng-container>
                             </ng-container>
-                            <ng-container *ngIf="displayCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1)">
+                            <ng-container *ngIf="displayFirstCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1, row.created.date, i+1, att?.attendance_type)">
                                 <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
                             </ng-container>
-
-
-                            <!-- <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i> -->
+                            <!--Evening PM-->
+                            <ng-container *ngIf="att?.employee_id == row.id && att?.attendance_type == 'clock in 2'">
+                                <ng-container *ngIf="checkLateTimePM(att?.created.date)">
+                                    <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i>
+                                </ng-container>
+                                <ng-container *ngIf="!checkLateTimePM(att?.created.date)">
+                                    <i class="fas fa-check-circle " style="color: rgb(51, 209, 16); "></i>
+                                </ng-container>
+                            </ng-container>
+                            <ng-container *ngIf="displaySecondCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1, row.created.date, i+1, att?.attendance_type)">
+                                <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
+                                <!-- <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i> -->
+                            </ng-container>
                         </ng-container>
-
+                        <ng-container *ngIf="attendanceMonthly[i] == '' && !compareTwoDate(i+1, row.created.date)">
+                            <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
+                            <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
+                        </ng-container>
+                    </ng-container>
+                    <ng-container *ngIf="compareTwoDate(i+1, row.created.date) && (days[i] != 'S' && days[i] != 'S')">
+                        -
+                    </ng-container>
+                    <ng-container *ngIf="(i >= current_day || (currentYear >= current_year && currentMonth < current_month)) && (days[i] != 'S' && days[i] != 'S')">
+                        -
                     </ng-container>
                 </td>
             </ng-container>
@@ -100,5 +126,5 @@
             </tr>
         </table>
     </div>
-    <mat-paginator class="mat-elevation-z8 " [pageSizeOptions]="[5, 10, 25, 100] " aria-label="Select page of users "></mat-paginator>
 </div>
+<mat-paginator style="background-color: #fafafa;" [pageSizeOptions]="[25, 10, 25, 100] " aria-label="Select page of users "></mat-paginator>
