--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -109,11 +109,11 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="start.date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Start From</th>
-            <td mat-cell *matCellDef="let element">{{ element.start.date | date: "yyyy-MM-dd" }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.start.date | date: "yyyy-MMM-dd" }}</td>
         </ng-container>
         <ng-container matColumnDef="end.date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
-            <td mat-cell *matCellDef="let element">{{ element.end.date | date: "yyyy-MM-dd" }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.end.date | date: "yyyy-MMM-dd" }}</td>
         </ng-container>
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
