--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -87,11 +87,11 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="from">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Start From</th>
-            <td mat-cell *matCellDef="let element">{{element.start.date | date: "yyyy-MM-dd"}}</td>
+            <td mat-cell *matCellDef="let element">{{element.start.date | date: "yyyy-MMM-dd"}}</td>
         </ng-container>
         <ng-container matColumnDef="to">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
-            <td mat-cell *matCellDef="let element">{{element.end.date | date: "yyyy-MM-dd"}}</td>
+            <td mat-cell *matCellDef="let element">{{element.end.date | date: "yyyy-MMM-dd"}}</td>
         </ng-container>
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
