--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,11 +20,11 @@
                         </div>
                     </mat-card-title>
                     <mat-card-content style="display: flex; justify-content: center">
-                        10
+                        <div style="font-size: 30px; font-weight: 900; color: orange;">10</div>
                     </mat-card-content>
                 </div>
                 <div>
-                    <button mat-fab color="primary" style="height: 70px; width: 70px;">
+                    <button mat-fab style="height: 70px; width: 70px; background-color: rgb(2, 83, 204); color: white;">
                     <div class="icon">
                       <mat-icon [inline]="true">people_outline</mat-icon>
                     </div>
@@ -41,11 +41,11 @@
                         </div>
                     </mat-card-title>
                     <mat-card-content style="display: flex; justify-content: center">
-                        0
+                        <div style="font-size: 30px; font-weight: 900; color: orange;">2</div>
                     </mat-card-content>
                 </div>
                 <div>
-                    <button mat-fab color="primary" style="height: 70px; width: 70px;">
+                    <button mat-fab style="height: 70px; width: 70px; background-color: rgb(2, 83, 204); color: white;">
                     <div class="icon">
                       <mat-icon [inline]="true">person_add</mat-icon>
                     </div>
@@ -62,11 +62,11 @@
                         </div>
                     </mat-card-title>
                     <mat-card-content style="display: flex; justify-content: center">
-                        0
+                        <div style="font-size: 30px; font-weight: 900; color: orange;">2</div>
                     </mat-card-content>
                 </div>
                 <div>
-                    <button mat-fab color="primary" style="height: 70px; width: 70px;">
+                    <button mat-fab style="height: 70px; width: 70px; background-color: rgb(2, 83, 204); color: white;">
                     <div class="icon">
                       <mat-icon [inline]="true">event_note</mat-icon>
                     </div>
@@ -83,11 +83,11 @@
                         </div>
                     </mat-card-title>
                     <mat-card-content style="display: flex; justify-content: center">
-                        0
+                        <div style="font-size: 30px; font-weight: 900; color: orange;">2</div>
                     </mat-card-content>
                 </div>
                 <div>
-                    <button mat-fab color="primary" style="height: 70px; width: 70px; ">
+                    <button mat-fab style="height: 70px; width: 70px; background-color: rgb(2, 83, 204); color: white;">
                     <div class="icon">
                       <mat-icon [inline]="true">event_available</mat-icon>
                     </div>
