--- a/src/app/component/attendance-admin/attendance-admin.component.html
+++ b/src/app/component/attendance-admin/attendance-admin.component.html
@@ -6,36 +6,42 @@
         <a routerLink="/">
             <h4>Dashboard</h4>
         </a>
-        <h4 style="margin-left: 3px;">/ Attendance </h4>
+        <h4 style="margin-left: 3px;">/ Attendance Monthly</h4>
     </div>
 </div>
-<mat-card style="margin-bottom: 20px;">
+<mat-card style="margin-bottom: 20px; height: 60px; display: flex; align-items: center;">
     <mat-form-field appearance="outline" style="margin: 0 1%">
         <mat-label>Search Employee name</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Seach id, name...." #input>
     </mat-form-field>
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
         <mat-label>Month</mat-label>
-        <input type="text" placeholder="Pick one" aria-label="Number" matInput [matAutocomplete]="auto" name="monthSelect" [(ngModel)]="month">
+        <input type="text" [formControl]="monthController" placeholder="Select month" aria-label="Number" matInput [matAutocomplete]="auto" name="monthSelect" [(ngModel)]="month">
         <mat-autocomplete #auto="matAutocomplete">
-            <mat-option value="Jan">Jan</mat-option>
-            <mat-option value="Feb">Feb</mat-option>
-            <mat-option value="Mar">Mar</mat-option>
-            <mat-option value="Apr">Apr</mat-option>
-            <mat-option value="May">May</mat-option>
-            <mat-option value="Jun">Jun</mat-option>
-            <mat-option value="Jul">Jul</mat-option>
-            <mat-option value="Aug">Aug</mat-option>
-            <mat-option value="Sep">Sep</mat-option>
-            <mat-option value="Oct">Oct</mat-option>
-            <mat-option value="Nov">Nov</mat-option>
-            <mat-option value="Dec">Dec</mat-option>
+            <mat-option *ngFor="let month of filteredMonths | async" [value]="month">{{ month }}</mat-option>
         </mat-autocomplete>
-    </mat-form-field>
+    </mat-form-field> -->
 
-    <mat-form-field class="example-full-width" appearance="outline" style="margin: 0 1%">
+    <mat-form-field appearance="outline" style="margin: 0 1%">
         <mat-label>Select Year</mat-label>
-        <mat-select name="yearSelect" [(value)]="current_year">
+        <mat-select name="monthSelect" (selectionChange)="searchMonthYear()" [(value)]="current_month">
+            <mat-option [value]="1">Jan</mat-option>
+            <mat-option [value]="2">Feb</mat-option>
+            <mat-option [value]="3">Mar</mat-option>
+            <mat-option [value]="4">Apr</mat-option>
+            <mat-option [value]="5">May</mat-option>
+            <mat-option [value]="6">Jun</mat-option>
+            <mat-option [value]="7">Jul</mat-option>
+            <mat-option [value]="8">Aug</mat-option>
+            <mat-option [value]="9">Sep</mat-option>
+            <mat-option [value]="10">Oct</mat-option>
+            <mat-option [value]="11">Nov</mat-option>
+            <mat-option [value]="12">Dec</mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline" style="margin: 0 1%">
+        <mat-label>Select Year</mat-label>
+        <mat-select name="yearSelect" (selectionChange)="searchMonthYear()" [(value)]="current_year">
             <mat-option [value]="2022">2022</mat-option>
             <mat-option [value]="2021">2021</mat-option>
             <mat-option [value]="2020">2020</mat-option>
@@ -43,88 +49,89 @@
             <mat-option [value]="2018">2018</mat-option>
         </mat-select>
     </mat-form-field>
-    <button type="submit" mat-raised-button color="primary" (click)="searchMonthYear()">
+    <!-- <button type="submit" mat-raised-button color="primary" (click)="searchMonthYear()">
       <mat-icon style="margin-right: 4px;">search</mat-icon>
       Search
-    </button>
+    </button> -->
 </mat-card>
-<div>
-    <div style="overflow: auto;" class="mat-elevation-z8 clendar-container">
-        <table mat-table [dataSource]="dataSource" matSort style="padding-right: 10px;">
+<div style="max-height: 375px; overflow: auto;" class="mat-elevation-z4">
+    <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
+    <table mat-table [dataSource]="dataSource" matSort>
+        <!-- ID Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> No </th>
+            <td mat-cell *matCellDef="let row; let i = index"> {{this.paginator.pageIndex * this.paginator.pageSize + i + 1}} </td>
+        </ng-container>
 
-            <!-- ID Column -->
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> No </th>
-                <td mat-cell *matCellDef="let row; let i = index"> {{this.paginator.pageIndex * this.paginator.pageSize + i + 1}} </td>
-            </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let row">{{row.lastName + " " + row.firstName}}</td>
+        </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let row">{{row.lastName + " " + row.firstName}}</td>
-            </ng-container>
-
-            <!-- Fruit Column -->
-            <ng-container *ngFor="let attend of attendanceColumns; index as i" matColumnDef="{{ attend }}">
-                <th mat-header-cell *matHeaderCellDef> {{ i+1 }}
-                    <div>{{ days[i] }}</div>
-                    <div style="font-size: 6px;">AM | PM</div>
-                </th>
-                <td mat-cell *matCellDef="let row">
-                    <ng-container *ngIf="(days[i] == 'S' || days[i] == 'S')">
-                        <i class="fas fa-circle" style="font-size: 7px; color: rgb(144, 149, 153);"></i>
-                    </ng-container>
-                    <ng-container *ngIf="(days[i] != 'S' && days[i] != 'S') && (currentYear <= current_year && currentMonth >= current_month)">
-                        <ng-container *ngFor="let att of attendanceMonthly[i]; let num = index">
-                            <!-- Morning AM-->
-                            <ng-container *ngIf="att?.employee_id == row.id && att?.attendance_type == 'clock in 1'">
-                                <ng-container *ngIf="checkLateTimeAM(att?.created.date)">
-                                    <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24);"></i>
-                                </ng-container>
-                                <ng-container *ngIf="!checkLateTimeAM(att?.created.date)">
-                                    <i class="fas fa-check-circle " style="color: rgb(51, 209, 16);"></i>
-                                </ng-container>
+        <!-- Fruit Column -->
+        <ng-container *ngFor="let attend of attendanceColumns; index as i" matColumnDef="{{ attend }}">
+            <th mat-header-cell *matHeaderCellDef> {{ i+1 }}
+                <div>{{ days[i] }}</div>
+                <div style="font-size: 6px;">AM | PM</div>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <ng-container *ngIf="(days[i] == 'S' || days[i] == 'S')">
+                    <i class="fas fa-circle" style="font-size: 7px; color: rgb(144, 149, 153);"></i>
+                </ng-container>
+                <ng-container *ngIf="(days[i] != 'S' && days[i] != 'S') && (currentYear <= current_year && currentMonth >= current_month)">
+                    <ng-container *ngFor="let att of attendanceMonthly[i]; let num = index">
+                        <!-- Morning AM-->
+                        <ng-container *ngIf="att?.employee_id == row.id && att?.attendance_type == 'clock in 1'">
+                            <ng-container *ngIf="checkLateTimeAM(att?.created.date)">
+                                <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24);"></i>
                             </ng-container>
-                            <ng-container *ngIf="displayFirstCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1, row.created.date, i+1, att?.attendance_type)">
-                                <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
-                            </ng-container>
-                            <!--Evening PM-->
-                            <ng-container *ngIf="att?.employee_id == row.id && att?.attendance_type == 'clock in 2'">
-                                <ng-container *ngIf="checkLateTimePM(att?.created.date)">
-                                    <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i>
-                                </ng-container>
-                                <ng-container *ngIf="!checkLateTimePM(att?.created.date)">
-                                    <i class="fas fa-check-circle " style="color: rgb(51, 209, 16); "></i>
-                                </ng-container>
-                            </ng-container>
-                            <ng-container *ngIf="displaySecondCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1, row.created.date, i+1, att?.attendance_type)">
-                                <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
-                                <!-- <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i> -->
+                            <ng-container *ngIf="!checkLateTimeAM(att?.created.date)">
+                                <i class="fas fa-check-circle " style="color: rgb(51, 209, 16);"></i>
                             </ng-container>
                         </ng-container>
-                        <ng-container *ngIf="attendanceMonthly[i] == '' && !compareTwoDate(i+1, row.created.date)">
-                            <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
+                        <ng-container *ngIf="displayFirstCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1, row.created.date, i+1, att?.attendance_type)">
                             <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
                         </ng-container>
+                        <!--Evening PM-->
+                        <ng-container *ngIf="att?.employee_id == row.id && att?.attendance_type == 'clock in 2'">
+                            <ng-container *ngIf="checkLateTimePM(att?.created.date)">
+                                <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i>
+                            </ng-container>
+                            <ng-container *ngIf="!checkLateTimePM(att?.created.date)">
+                                <i class="fas fa-check-circle " style="color: rgb(51, 209, 16); "></i>
+                            </ng-container>
+                        </ng-container>
+                        <ng-container *ngIf="displaySecondCondition(att?.employee_id, row.id, num, attendanceMonthly[i].length-1, row.created.date, i+1, att?.attendance_type)">
+                            <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
+                            <!-- <i class="fas fa-alarm-exclamation " style="color: rgb(240, 179, 24); "></i> -->
+                        </ng-container>
                     </ng-container>
-                    <ng-container *ngIf="compareTwoDate(i+1, row.created.date) && (days[i] != 'S' && days[i] != 'S')">
-                        -
+                    <ng-container *ngIf="attendanceMonthly[i] == '' && !compareTwoDate(i+1, row.created.date)">
+                        <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
+                        <i class="fas fa-times-circle " style="color: rgb(247, 85, 70); "></i>
                     </ng-container>
-                    <ng-container *ngIf="(i >= current_day || (currentYear >= current_year && currentMonth < current_month)) && (days[i] != 'S' && days[i] != 'S')">
-                        -
-                    </ng-container>
-                </td>
-            </ng-container>
+                </ng-container>
+                <ng-container *ngIf="compareTwoDate(i+1, row.created.date) && (days[i] != 'S' && days[i] != 'S')">
+                    - -
+                </ng-container>
+                <ng-container *ngIf="(i >= current_day && currentMonth <= current_month && currentYear == current_year) && (days[i] != 'S' && days[i] != 'S')">
+                    - -
+                </ng-container>
+                <ng-container *ngIf="(currentMonth < current_month && currentYear == current_year) && (days[i] != 'S' && days[i] != 'S')">
+                    - -
+                </ng-container>
+            </td>
+        </ng-container>
 
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns "></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
 
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row " *matNoDataRow>
-                <td class="mat-cell " colspan="4 ">No data matching the filter "{{input.value}} "</td>
-            </tr>
-        </table>
-    </div>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row " *matNoDataRow>
+            <td class="mat-cell " colspan="4 ">No data matching the filter "{{input.value}} "</td>
+        </tr>
+    </table>
 </div>
-<mat-paginator style="background-color: #fafafa;" [pageSizeOptions]="[25, 10, 25, 100] " aria-label="Select page of users "></mat-paginator>
+<mat-paginator style="background-color: #fafafa; margin-top: 4px;" [pageSizeOptions]="[25, 10, 25, 100] " aria-label="Select page of users "></mat-paginator>
