--- a/src/app/component/employee-leave/dialog-decline-employee-leave.html
+++ b/src/app/component/employee-leave/dialog-decline-employee-leave.html
@@ -1,8 +1,9 @@
-<div style="width: 30vw; padding: 1em">
+<div style="width: 30vw; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+    <img width="90px" height="90px" src="/assets/images/alert-delete.gif" alt="#" style="margin: 10px 0 30px 0;">
     <h1 mat-dialog-title>Are you sure to Delcine this request?</h1>
     <form>
         <div mat-dialog-actions>
-            <button mat-button mat-dialog-close color="warn">Cancel</button>
+            <button mat-button mat-dialog-close style="background-color: rgb(162, 162, 162); color: white;"><i class="fas fa-times-circle"></i> Cancel</button>
             <button type="submit" mat-raised-button style="color: white; background-color: rgb(247, 85, 70); font-weight: 500;" (click)="declineLeave()">Decline</button>
         </div>
     </form>
