--- a/src/app/component/employee-leave/dialog-employee-leave.html
+++ b/src/app/component/employee-leave/dialog-employee-leave.html
@@ -28,14 +28,13 @@
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]=" picker">
-                    <input matStartDate placeholder="Start date" [(ngModel)]="empLeave.start">
+                    <input [min]="minDate" [max]="maxDate" matStartDate placeholder="Start date" [(ngModel)]="empLeave.start">
                     <input matEndDate placeholder="End date" [(ngModel)]="empLeave.end">
                 </mat-date-range-input>
                 <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
-
         </div>
         <mat-form-field class="example-full-width" appearance="fill" style="width: 100%;">
             <mat-label>Description</mat-label>
