--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,10 @@ a:hover {
     font-weight: bold;
 }
 
+i {
+    margin-right: 5px;
+}
+
 
 /* .mat-form-field-appearance-outline .mat-form-field-flex {
     background-color: #fafafa !important;
@@ -65,8 +69,7 @@ a:hover {
 
 /* Angular Material Overrides */
 
-
-/* .mat-form-field-appearance-outline .mat-form-field-outline {
+.mat-form-field-appearance-outline .mat-form-field-outline {
     color: #ccc;
 }
 
@@ -76,4 +79,8 @@ a:hover {
 
 .mat-form-field-label-wrapper {
     top: -1.2em;
-} */
+}
+
+.mat-form-field-wrapper {
+    padding: 0;
+}
